# ChangeLog for app-misc/cds-meta
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  26 Nov 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
  cds-meta-10.0.ebuild:
  Added sys-fs/xfsdump package to cds-meta-10.0

  23 Nov 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
  +cds-meta-10.0.ebuild,+metadata.xml:
  Meta package for CDS.