@@ -1,6 +1,12 @@
 # ChangeLog for app-misc/cds-meta
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*cds-meta-10.3.91 (01 Apr 2010)
+
+  01 Apr 2010; Трацевский Александр
+  <atratsevskiy@gentoo.org> +cds-meta-10.3.91.ebuild:
+  Added cds-meta-10.3.91.ebuild
 
   26 Nov 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
   cds-meta-10.0.ebuild:
